--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,4 +13,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attribute.Vital.Mana",DevComment="Resource used to cast spells")
 +GameplayTagList=(Tag="Attribute.Vital.MAxHealth",DevComment="")
 +GameplayTagList=(Tag="Attribute.Vital.MaxMana",DevComment="")
++GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
++GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
++GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
++GameplayTagList=(Tag="Message.ManaPotion",DevComment="")
 
