--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,6 +57,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Aura")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Aura")
+AssetManagerClassName=/Script/Aura.MyAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -71,4 +72,9 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/Aura.AttibuteInfo",NewName="/Script/Aura.AttributeInfo")
++ClassRedirects=(OldName="/Script/Aura.AuraAssetManager",NewName="/Script/Aura.MyAssetManager")
 
