--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,3 +78,6 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/Aura.AttibuteInfo",NewName="/Script/Aura.AttributeInfo")
 +ClassRedirects=(OldName="/Script/Aura.AuraAssetManager",NewName="/Script/Aura.MyAssetManager")
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
